--- a/docker/nvidia-gazebo/Dockerfile
+++ b/docker/nvidia-gazebo/Dockerfile
@@ -1,4 +1,4 @@
-FROM gazebo-cloudsim:latest
+FROM gazebo:latest
 
 # This image extends from gazebo-cloudsim image to provide support for
 # nvidia-docker-plugin
@@ -6,5 +6,3 @@ FROM gazebo-cloudsim:latest
 LABEL com.nvidia.volumes.needed="nvidia_driver"
 ENV PATH /usr/local/nvidia/bin:${PATH}
 ENV LD_LIBRARY_PATH /usr/local/nvidia/lib:/usr/local/nvidia/lib64:${LD_LIBRARY_PATH}
-
-USER $USERNAME
