minor changes to scripts

--- a/docker/s3bucket/Dockerfile
+++ b/docker/s3bucket/Dockerfile
@@ -22,15 +22,16 @@ RUN wget https://github.com/s3fs-fuse/s3fs-fuse/archive/v1.80.tar.gz \
     && rm v1.80.tar.gz \
     && cd /usr/src/s3fs-fuse-1.80 && ./autogen.sh && ./configure --prefix=/usr && make && make install
 
-# Create dir and give w permissions to other users. The cloudsim user will mount s3 on top 
-# of this dir, when the s3_entrypoint is exectuted. 
+# Create default mount dir and give w permissions to other users. The cloudsim 
+# user will mount s3 on top of this dir, when the s3_entrypoint is exectuted. 
 RUN mkdir /mnt/s3bucket && chmod 777 /mnt/s3bucket
 
 ENV S3_BUCKET_NAME cloudsim_default_bucket
 
 # setup entrypoint
 COPY ./s3_entrypoint.sh /
-RUN chmod 755 /s3_entrypoint.sh
+COPY ./upload_to_s3.sh /
+RUN chmod 755 /s3_entrypoint.sh /upload_to_s3.sh
 
 USER $USERNAME
 
