more command line arguments

--- a/docker/src-cloudsim/Dockerfile
+++ b/docker/src-cloudsim/Dockerfile
@@ -66,3 +66,5 @@ RUN cd $HOME \
 # Pre-build ihmc_ros_java_adapter
 RUN . /opt/nasa/indigo/setup.sh \
     && roslaunch ihmc_valkyrie_ros valkyrie_warmup_gradle_cache.launch
+
+RUN mkdir -p $HOME/gazebo-logs
